アプリ版利用時にDBの言語設定が意図せず更新されてしまう不具合を修正